# dragon-ops

./: .gitignore  README.md  SETUP_INSTRUCTIONS.md  main.py  pyproject.toml  pytest.ini  render.yaml  requirements.txt
.cursor/rules/: modifications.mdc  project-context.mdc
alano_club_site/: settings.py  urls.py
data/: clean_payments.py  data_description.md  data_script_member_cleaning.py  explore_csv_data.py  payment_matching_script.py  playground.py
data/archive/: 2025_08_26_Members.csv  2025_08_26_Payments.csv  OLD_Members-Data.csv  convert_xlsx_to_csv.py  (+1 more)
docs/: CHANGE_LOG.md  DATABASE_RESET_GUIDE.md  DATABASE_SYNC_GUIDE.md  DATA_UPDATE_2025_12_06.md  FUTURE_CHANGES.md  REFACTORING_RECOMMENDATIONS.md  RENDER_DEPLOYMENT.md  SETUP_INSTRUCTIONS.md  SUPABASE_CONNECTION_SETUP.md  TESTING_METHODOLOGY.md
etl_scripts/: DATA_PREP_DESCRIPTION.md  clean_dead_data.py  clean_member_data.py  clean_member_payments.py
members/: admin.py  admin_views.py  models.py  services.py  urls.py  utils.py  views.py
playground/: README.md  clean_member_payments.py
scripts/: DATA_PREP_DESCRIPTION.md  clean_dead_data.py  clean_member_data.py  clean_member_payments.py
tests/: README.md  __init__.py  conftest.py  test_admin_views.py  test_database.py  test_edit_member.py  test_expires_two_months_export.py  test_member_form_fields.py  test_member_manager.py  test_member_service.py  test_member_with_payment.py  test_milestone_export.py  test_new_member_export.py  test_payment_service.py  test_pdf_generation.py  test_report_generation.py  test_utils.py  test_views.py  test_zip_code.py
(+58 files in other folders)
